# ironsubst

./: .actrc  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  codecov.yml  compare.py  comparison.md  demo.tape  example.txt  hk.pkl  mise.toml  renovate.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker.yml  release-plz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_process.rs
src/: ast.rs  envfile.rs  eval.rs  glob.rs  lib.rs  main.rs  parser.rs
tests/: cli.rs  integration_test.rs
