[package]
name = "ironsubst"
version = "0.2.0"
edition = "2024"
# Rust 2024 edition requires 1.85+; declare explicitly so `cargo install` gives
# a clear error on older toolchains instead of a cryptic compile failure.
rust-version = "1.85"
description = "Environment variable substitution — faster, stricter, POSIX-correct"
license = "MIT"
repository = "https://github.com/melonswork/ironsubst"
homepage = "https://github.com/melonswork/ironsubst"
keywords = ["envsubst", "env", "template", "substitution", "posix"]
categories = ["command-line-utilities", "template-engine"]
exclude = [
    ".actrc",
    ".cargo_vcs_info.json",
    ".github/",
    ".gitignore",
    "Cargo.toml.orig",
    "Dockerfile",
    "cliff.toml",
    "codecov.yml",
    "compare.py",
    "comparison.md",
    "demo.gif",
    "demo.tape",
    "example.txt",
    "hk.pkl",
    "mise.toml",
    "renovate.json",
    "fuzz/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
libc = "0.2"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
libc = "0.2"
predicates = "3"

[profile.release]
lto = true          # Link-time optimisation — reduces binary size ~20-30% and improves throughput
codegen-units = 1   # Single codegen unit lets LLVM see the whole program; slower compile, faster runtime
strip = true        # Strip symbols from the final binary
opt-level = 3       # Maximum optimisation (default, but explicit is better than implicit)
